# cncpts

./: CMakeLists.txt  README.md
cmake/: CncptsConfig.cmake
include/: CMakeLists.txt
include/cncpts/: cncpts.hpp
tests/: CMakeLists.txt  cncpts_tests.cpp
